<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="period">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="delete">AC</string>
    <string name="left_paren">(</string>
    <string name="right_paren">)</string>
    <string name="mc">mc</string>
    <string name="m_plus">m+</string>
    <string name="m_minus">m-</string>
    <string name="mr">mr</string>
    <string name="second">2<sup>nd</sup></string>
    <string name="squared">x<sup>2</sup></string>
    <string name="cubed">x<sup>3</sup></string>
    <string name="x_to_y">x<sup>y</sup></string>
    <string name="e_to_x">e<sup>x</sup></string>
    <string name="ten_to_x">10<sup>x</sup></string>
    <string name="inverse"><sup>1</sup>/<sub>x</sub></string>
    <string name="square_root"><sup>2</sup></string>
    <string name="natural_log">ln</string>
    <string name="log_ten">log<sub>10</sub></string>
    <string name="factorial">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="eulers_constant">e</string>
    <string name="scientific_notation">EE</string>
    <string name="rad">Rad</string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="pi">pi</string>
    <string name="rand">Rand</string>
    <string name="plus_minus"><sup>+</sup>/<sub>-</sub></string>
    <string name="percent">%</string>
    <string name="square_root_symbol">\u221a</string>
</resources>
